[gd_scene load_steps=6 format=3 uid="uid://3xiwvfjqw7wt"]

[ext_resource type="PackedScene" uid="uid://vdltegqe4p5c" path="res://scenes/ui/slider.tscn" id="1_01myj"]
[ext_resource type="Script" uid="uid://ddapxfdiua1jx" path="res://scripts/ui/volume_slider.gd" id="1_1q0c3"]
[ext_resource type="FontFile" uid="uid://m2gxs3lik11m" path="res://fonts/Tiny5-Regular.ttf" id="2_1q0c3"]

[sub_resource type="LabelSettings" id="LabelSettings_2fil4"]
font = ExtResource("2_1q0c3")
font_size = 32

[sub_resource type="LabelSettings" id="LabelSettings_evj6w"]
font = ExtResource("2_1q0c3")
font_size = 32

[node name="VolumeGroup" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -27.0
offset_right = 20.0
offset_bottom = 13.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_1q0c3")

[node name="Slider" parent="." instance=ExtResource("1_01myj")]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -63.0
offset_top = -30.0
offset_right = 55.0
offset_bottom = -14.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(59, 8)

[node name="PercentLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 247.0
offset_top = -39.0
offset_right = 315.0
offset_bottom = -3.0
grow_horizontal = 2
grow_vertical = 2
text = "100%"
label_settings = SubResource("LabelSettings_2fil4")
vertical_alignment = 1

[node name="BusLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -359.0
offset_top = -45.0
offset_right = -263.0
offset_bottom = -9.0
grow_horizontal = 2
grow_vertical = 2
text = "Master"
label_settings = SubResource("LabelSettings_evj6w")
horizontal_alignment = 2
vertical_alignment = 1

[connection signal="set_volume_slider" from="." to="Slider" method="set_value"]
[connection signal="volume_bus_name_updated" from="." to="BusLabel" method="set_text"]
[connection signal="volume_display_percent_updated" from="." to="PercentLabel" method="set_text"]
[connection signal="value_changed" from="Slider" to="." method="_on_volume_value_updated"]
